update depedencies