@@ -5,29 +5,35 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>PROYECT-NAME</artifactId>
+    <artifactId>Mobile</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
-        <appium.version>9.2.2</appium.version>
-        <selenium.version>4.21.0</selenium.version>
+        <appium.version>10.1.0</appium.version>
+        <cucumber.filter.tags>@All</cucumber.filter.tags> <!-- tag por defecto si no especificado uno -->
+        <selenium.version>4.43.0</selenium.version>
         <selenium-remote-driver>4.21.0</selenium-remote-driver>
-        <cucumber.version>7.18.0</cucumber.version>
+        <cucumber.version>7.34.2</cucumber.version>
         <extentreports.version>1.14.0</extentreports.version>
-        <junit.version>5.10.2</junit.version>
-        <restassured.version>5.3.0</restassured.version>
+        <junit.version>5.14.2</junit.version>
+        <junit.platform.version>1.14.2</junit.platform.version>
+        <restassured.version>6.0.0</restassured.version>
         <commons-logging.version>1.2</commons-logging.version>
         <log4j.version>2.23.1</log4j.version>
-        <slf4j-api.version>2.0.13</slf4j-api.version>
-        <lombok.version>1.18.30</lombok.version>
+        <slf4j-api.version>2.0.17</slf4j-api.version>
+        <lombok.version>1.18.38</lombok.version>
         <jetbrains-annotations.version>24.0.1</jetbrains-annotations.version>
-        <maven-deploy-plugin>3.1.2</maven-deploy-plugin>
-        <maven-install-plugin>3.1.2</maven-install-plugin>
+        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
         <maven-site-plugin>3.20.0</maven-site-plugin>
-        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.source>21</maven.compiler.source> <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
+        <maven.compiler.target>21</maven.compiler.target> <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
     </properties>
 
     <dependencies>
@@ -59,8 +65,9 @@
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit</artifactId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
             <version>${cucumber.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- ExtentReports Cucumber7 Adapter -->
@@ -71,10 +78,29 @@
         </dependency>
 
         <!-- JUnit -->
+        <!-- JUnit Platform y Jupiter -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-api</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-engine</artifactId>
+            <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -136,18 +162,6 @@
         <!-- Maven Plugins -->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-deploy-plugin</artifactId>
-            <version>${maven-deploy-plugin}</version>
-            <type>maven-plugin</type>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-install-plugin</artifactId>
-            <version>${maven-install-plugin}</version>
-            <type>maven-plugin</type>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
             <version>${maven-site-plugin}</version>
             <type>maven-plugin</type>
@@ -157,22 +171,47 @@
 
     <build>
         <plugins>
+            <!-- Fuerza creación del JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.0</version>
+                <configuration>
+                    <!-- no uses <skip>true/> -->
+                </configuration>
+            </plugin>
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>${maven.compiler.release}</release>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
+            <!-- Maven Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <systemPropertyVariables>
+                        <cucumber.filter.tags>${cucumber.filter.tags}</cucumber.filter.tags>
+                    </systemPropertyVariables>
+
+                    <printSummary>true</printSummary>
+                    <useFile>false</useFile>
+                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
+
+                    <argLine>--enable-native-access=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
